[package]
name = "sml"
version = "0.1.0"
authors = ["Stoozy <mahinsemail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0"
hyper = "0.13.8"
ureq = "2.0.2"
ftp = "3.0.1"
zip = "0.5"
