[package]
name = "sml"
version = "0.1.0"
authors = ["Stoozy <mahinsemail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0"
hyper = "0.13.8"
ureq = { version="2.0.2", features =["json"] }
ftp = "3.0.1"
zip = "0.5"
indicatif = "0.15.0"
walkdir = "2"
rpassword = "0.0.4"
