[package]
name = "sml"
version = "0.1.1"
authors = ["Stoozy"]
description = "A Minecraft Launcher Command Line Interface"
homepage= "https://github.com/Stoozy/sml"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "^0.8"
uuid = { version="0.8", features = ["v4"]}
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.14"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
hyper = "0.13.8"
ftp = "3.0.1"
zip = "0.5"
indicatif = "0.15.0"
walkdir = "2"
rpassword = "5.0"
subprocess = "0.2.6"
ansi_term = "0.12"
rust-crypto = "^0.2"
reqwest = { version="0.10", features=["blocking","json"]}
fs_extra = "1.2.0"
env_logger = "0.6.1"
log = "0.4.14"
